# udemy-agents-course

./: .gitignore
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: README.md  deep_research.py  email_agent.py  requirements.txt  research_manager_agent.py
3_crew/coder_custom/: README.md  pyproject.toml
3_crew/coder_custom/output/: code_and_output.txt
3_crew/coder_custom/src/coder_custom/: crew.py  main.py
3_crew/coder_custom/src/coder_custom/config/: agents.yaml
3_crew/debate_custom/: README.md  pyproject.toml
3_crew/debate_custom/output/: decide.md  oppose.md  propose.md
3_crew/debate_custom/src/debate_custom/: crew.py  main.py
3_crew/debate_custom/src/debate_custom/config/: agents.yaml  tasks.yaml
3_crew/engineering_team_custom/: README.md  pyproject.toml
3_crew/engineering_team_custom/output/: accounts.py  accounts.py_design.md  app.py
3_crew/engineering_team_custom/src/engineering_team_custom/: crew.py  main.py
3_crew/financial_researcher_custom/: README.md  pyproject.toml
3_crew/financial_researcher_custom/output/: report.md
3_crew/financial_researcher_custom/src/financial_researcher_custom/: crew.py  main.py
3_crew/financial_researcher_custom/src/financial_researcher_custom/config/: agents.yaml
3_crew/stock_picker_custom/: README.md  pyproject.toml
3_crew/stock_picker_custom/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker_custom/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_custom/src/stock_picker_custom/: crew.py  main.py
3_crew/stock_picker_custom/src/stock_picker_custom/config/: tasks.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  idea1.md  idea10.md  idea11.md  idea12.md  idea13.md  idea14.md  idea15.md  idea16.md  idea17.md  idea18.md  idea19.md  idea2.md  idea20.md  idea3.md  idea4.md  idea5.md  (+4 more)
5_autogen/sandbox/: flights.md
