[project]
name = "debate_custom"
version = "0.1.0"
description = "debate_custom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
debate_custom = "debate_custom.main:run"
run_crew = "debate_custom.main:run"
train = "debate_custom.main:train"
replay = "debate_custom.main:replay"
test = "debate_custom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
