[project]
name = "engineering_team_custom"
version = "0.1.0"
description = "engineering_team_custom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
engineering_team_custom = "engineering_team_custom.main:run"
run_crew = "engineering_team_custom.main:run"
train = "engineering_team_custom.main:train"
replay = "engineering_team_custom.main:replay"
test = "engineering_team_custom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
