[project]
name = "financial_researcher_custom"
version = "0.1.0"
description = "financial_researcher_custom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
financial_researcher_custom = "financial_researcher_custom.main:run"
run_crew = "financial_researcher_custom.main:run"
train = "financial_researcher_custom.main:train"
replay = "financial_researcher_custom.main:replay"
test = "financial_researcher_custom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
