[project]
name = "stock_picker_custom"
version = "0.1.0"
description = "stock_picker_custom using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
stock_picker_custom = "stock_picker_custom.main:run"
run_crew = "stock_picker_custom.main:run"
train = "stock_picker_custom.main:train"
replay = "stock_picker_custom.main:replay"
test = "stock_picker_custom.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
